layout bugs fixed

--- a/frontend/assets/sass/classes/_layout.scss
+++ b/frontend/assets/sass/classes/_layout.scss
@@ -12,3 +12,8 @@
   .grid{
     display: grid;
   }
+
+  .pullUp{
+    position: relative;
+    z-index: 10;
+  }
