--- a/frontend/assets/sass/classes/_link.scss
+++ b/frontend/assets/sass/classes/_link.scss
@@ -13,7 +13,7 @@
     bottom: -100%;
     left: 0;
     transform: scaleY(-1);
-    -webkit-mask-image: linear-gradient(
+    mask-image: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0)
